# irc-logger

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.rst  bootstrap-buildbot.sh  bootstrap-googlebot.sh  bootstrap-index.sh  bootstrap.sh  bootstrap_buildbot.sh  bootstrap_googlebot.sh  bootstrap_index.sh  buildbot.cfg.tmpl  config.py  duckdns-update.sh  duckdns.sh  duckdns_update.sh  freedns-update.sh  ircbot.py  main.cfg  main.cfg.example  pyproject.toml  reconfig.sh  rollup.config.js  run-duckdns.sh  run-quodlibet.sh  run.py  start.sh  start_web.sh  stop.sh  style.scss
frontend/: package-lock.json  package.json  rollup.config.js  style.scss
googlebot/: bot.yaml.example  googlecode-irc-bot.py
googlebot/gib/: ircbot.py  logger.py  project.py  readers.py
gtkbot/: bot.yaml.example
misc/: buildbot.cfg.tmpl  googlebot.diff  googlebot.yaml.tmpl
pypybot/: bot.yaml.example
pypybot/gib/: logger.py
systemd/: duckdns.service  quodlibet.service
web/: __init__.py  index.py
web/static/css/: index.css
web/templates/: buildbot.html  iframe.html  index.html  irc.html  layout.html  po.html
