[tool.poetry]
name = "irc-logger"
version = "0.1.0"
description = ""
authors = ["Christoph Reiter"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
Flask = "^2.0.1"
irclog2html = "^2.17.2"
Twisted = "^21.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
